[tool.poetry]
name = "robinhoodtest"
version = "0.1.0"
description = ""
authors = ["Henry Post <HenryFBP@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
#pyrh = "*"
pyrh = { git = "https://github.com/HenryFBP/pyrh", branch = "fix-pypi-release" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
