[tool.poetry]
name = "robinhoodtest"
version = "0.1.0"
description = ""
authors = ["Henry Post <HenryFBP@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
#pyrhhfbp = "*" # we can do this if we want to pull from pypi...but I'd rather pull from my github repo...
pyrhhfbp = { git = "https://github.com/HenryFBP/pyrhhfbp", branch = "master" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
